# lrc

./: .gitignore  README.md  install_deps.sh  jadis_publickey.asc  lrc  pyproject.toml  requirements.txt  trusted_templates.json
.github/workflows/: lrc-build.yml  sign-and-release.yaml  sign-and-release.yml
docs/: dat-integration.md  getting-started.md  troubleshooting.md
examples/: dat_integration.lrc  forgekit_schema_full.lrc  schema_dev_example.lrc  schema_entprse_example.lrc  schema_example.lrc  schema_org_example.lrc
src/lrc/: __init__.py  __main__.py  audit.py  bootstrap.py  compiler.py  core.py  generator.py  integration.py  main.py  parser.py
src/lrc/cli/: __init__.py  main.py
src/lrc/compiler/: __init__.py
src/lrc/generator/: __init__.py
src/lrc/parser/: __init__.py
src/lrc/templates/: __init__.py
src/lrc/templates/node-cli/: README.md  package.json
src/lrc/templates/python-cli/: README.md  pyproject.toml
src/lrc/templates/python-cli/src/: __init__.py  main.py
src/lrc/templates/rust-cli/: Cargo.toml  README.md
src/lrc/templates/rust-cli/src/: main.rs
tests/: test_cli.py  test_cli_audit.py  test_dat_integration.py  test_integration.py  test_parser.py  test_parser_trust.py
tests/data/: simple.lrc
