[project]
name = "lrc"
version = "1.0.0-alpha.1"
description = "Local Repo Compile — build a repo from a declarative schema file"
readme = "README.md"
authors = [
    { name = "Justadudeinspace", email = "justadudeinspace@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["scaffolding", "templates", "code-generation", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "colorama>=0.4.6,<1.0",
    "rich>=13.0.0,<15.0",
    "python-magic>=0.4.27,<1.0",
    "pathspec>=0.12.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.8.0,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "isort>=5.13.0,<6.0.0",
    "build>=1.0.0,<2.0.0",
]

pdf = [
    "reportlab>=4.0.8,<5.0",
    "Pillow>=11.3.0,<12.0",
]

perf = [
    "orjson>=3.9.0,<4.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

all = [
    "reportlab>=4.0.8,<5.0",
    "Pillow>=11.3.0,<12.0",
    "orjson>=3.9.0,<4.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/Justadudeinspace/lrc"
Repository = "https://github.com/Justadudeinspace/lrc"
Documentation = "https://github.com/Justadudeinspace/lrc#readme"

[project.scripts]
lrc = "lrc.__main__:main"

[project.entry-points."lrc_templates"]
python-cli = "lrc.core:template_actions"
node-cli = "lrc.core:template_actions"
rust-cli = "lrc.core:template_actions"

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
